# feat

./: .gitignore  CHANGES.md  Makefile  README.md  TODO.md  feat-core.opam  feat-num.opam  feat.opam
demo/: Test.ml  dune
src/: Enum.ml  Enum.mli  EnumFunctor.ml  EnumFunctor.mli  EnumFunctorIntf.ml  FeatCore.ml  IFBigSeq.ml  IFBigSeqSig.ml  IFSeq.ml  IFSeq.mli  IFSeqList.ml  IFSeqList.mli  IFSeqObj.ml  IFSeqObj.mli  IFSeqSig.ml  IFSeqSyn.ml  IFSeqSyn.mli  RandomSig.ml  Seq.ml  Seq.mli  SeqList.ml  SeqList.mli  SeqObj.ml  SeqObj.mli  SeqSig.ml  SeqSyn.ml  SeqSyn.mli  bigint.ml  bigint.mli  bigintfunctor.ml  bigintfunctor.mli  bignum.ml  dune
src-feat/: Enum.ml  Enum.mli  Feat.ml  IFSeq.ml  IFSeq.mli  bigint.ml  bigint.mli  dune
src-feat-num/: FeatNum.ml  dune
