name: "feat"
opam-version: "2.0"
maintainer: "francois.pottier@inria.fr"
authors: [
  "François Pottier <francois.pottier@inria.fr>"
]
homepage: "https://gitlab.inria.fr/fpottier/feat"
dev-repo: "git+https://gitlab.inria.fr/fpottier/feat.git"
bug-reports: "francois.pottier@inria.fr"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" { >= "4.03" }
  "dune" { build & >= "1.3" }
  "zarith"
]
synopsis: "Facilities for enumerating and sampling algebraic data types"
